--- a/modules/emailView/emailView.html
+++ b/modules/emailView/emailView.html
@@ -7,7 +7,7 @@
         </li>
         <li class="list-group-item">
             <span class="bigger">Received on:</span>
-            TODO
+            {{id | date:'medium'}}
         </li>
         <li class="list-group-item">
             <span class="bigger">From:</span>
