--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body ng-controller="mainCtrl">
 
     <!-- NAVIGATION -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggle" type="button" ng-init="isCollapsed = true" ng-click="isCollapsed = !isCollapsed">
@@ -51,7 +51,7 @@
     <div class="container">
 
         <!-- THIS IS WHERE WE WILL INJECT OUR CONTENT  -->
-        <div ui-view></div>
+        <div ui-view class="content"></div>
 
     </div>
 
