--- a/modules/emailView/emailView.html
+++ b/modules/emailView/emailView.html
@@ -15,7 +15,7 @@
         </li>
         <li class="list-group-item">
             <span class="bigger">To:</span>
-            sosnowski@outlook.com
+            {{rec}}
         </li>
         <li class="list-group-item">{{content}}</li>
     </ul>
