--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <script src="/app.module.js"></script>
     <script src="/app.provider.js"></script>
     <script src="/app.routes.js"></script>
-    <script src="/app.factory.js"></script>
+    <script src="/emails.factory.js"></script>
+    <script src="/sent.factory.js"></script>
     <script src="/app.controller.js"></script>
     <script src="/app.directive.js"></script>
     <script src="/assets/js/angular-local-storage.min.js"></script>
@@ -77,16 +78,13 @@
     <script src="/assets/js/ui-bootstrap-tpls-0.12.0.min.js"></script>
     <script src="/modules/config/config.controller.js"></script>
     <script src="/modules/create/email.controller.js"></script>
-    <script src="/modules/create/email.directive.js"></script>
     <script src="/modules/emailView/emailView.controller.js"></script>
     <script src="/modules/inbox/inbox.controller.js"></script>
     <script src="/modules/inbox/inbox.directive.js"></script>
     <script src="/modules/inbox/inbox.factory.js"></script>
-    <script src="/modules/inbox/customFolder/customFolder.directive.js"></script>
     <script src="/modules/inbox/customFolder/customFolder.factory.js"></script>
     <script src="/modules/inbox/customFolder/customList.controller.js"></script>
     <script src="/modules/sent/sent.controller.js"></script>
-    <script src="/modules/sent/sent.directive.js"></script>
     <!-- endinjector -->
     </body>
 
