--- a/modules/config/config.html
+++ b/modules/config/config.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" ng-controller="config">
+<div class="jumbotron" ng-controller="configCtrl">
     <div class="row">
         <div class="col-xs-6">
             Change theme:&emsp;
