--- a/modules/emailView/emailView.html
+++ b/modules/emailView/emailView.html
@@ -1,4 +1,4 @@
-<div class="panel panel-success" ng-controller="emailView">
+<div class="panel panel-success" ng-controller="emailViewCtrl">
     <ul class="list-group">
         <li class="list-group-item list-group-item-success">
             <span class="bigger">Title: {{title}}</span>
