--- a/modules/create/email.html
+++ b/modules/create/email.html
@@ -1,47 +1,45 @@
-<div class="sendotron jumbotron" ng-controller="emailCtrl">
-    <form name="formName" novalidate>
-        <fieldset class="top-label">
-            <div class="receivers">
-                <label for="title">Receivers</label>
-                <div class="receivers-table">
-                    <table class="table">
-                       <tbody name="recList" rec-list ng-model="myForm.receivers"></tbody>
-                    </table>
-                </div><br/>
-                <div class="error" ng-messages="formName.recList.$error">
-                    <div ng-message="atleastone">You need at least one receiver.</div>
+<div class="jumbotron" ng-controller="emailCtrl">
+    <div class="row">
+        <h3>Create new E-mail:</h3>
+        <form name="createEmail" ng-submit="submitForm(createEmail.$valid)" novalidate>
+            <div class="col-md-6">
+                <!-- TITLE -->
+                <div class="form-group" ng-class="{ 'has-error' : createEmail.title.$invalid && !createEmail.title.$pristine }">
+                    <label>Title:</label>
+                    <input type="text" name="title" class="form-control" ng-model="title" required>
+                    <p ng-show="createEmail.title.$invalid && !createEmail.title.$pristine" class="help-block">The title is required.</p>
                 </div>
-
-                <label for="title">New Receiver</label>
-                <input type="email" name="newReceiver" ng-model="myForm.newRec" validemail zerolength checkifexist placeholder="f.e. adam@gmail.com">
-                <div class="error" ng-messages="formName.newReceiver.$error">
-                    <div ng-message="zerolength"></div>
-                    <div ng-message="validemail">Given e-mail is invalid.</div>
-                    <div ng-message="checkifexist">This e-mail already is on your list.</div>
+                <!-- Receivers -->
+                <div class="row">
+                    <div class="col-md-12">
+                        <label>To:</label>
+                        <table class="table">
+                            <tr class="active" popover="Remove the e-mail" popover-trigger="mouseenter" ng-repeat="receiver in receivers" ng-click="remove($index)">
+                                <td>{{receiver}}</td>
+                            </tr>
+                            <p ng-show="receivers.length <= 0" class="help-block">You have to add at least one receiver.</p>
+                        </table>
+                    </div>
                 </div>
-
-                <input type="button" class="btn btn-default"ng-click="myForm.addNewReceiver()" value="Add new receiver" ng-disabled="recerror"/>
+                <!-- MESSAGE-->
+                <div class="form-group" ng-class="{ 'has-error' : createEmail.msg.$invalid && !createEmail.msg.$pristine }">
+                    <label>Message:</label>
+                    <textarea class="form-control" rows="6" name="msg" class="form-control" ng-model="msg" ng-minlength="20" ng-maxlength="250" required></textarea>
+                    <p ng-show="createEmail.msg.$error.minlength" class="help-block">Message is too short.</p>
+                    <p ng-show="createEmail.msg.$error.maxlength" class="help-block">Message is too long.</p>
+                    <p ng-show="createEmail.msg.$invalid && !createEmail.username.$pristine" class="help-block">Message is required.</p>
+                </div>
+                <button type="submit" class="btn btn-primary" ng-disabled="receivers.length <= 0 || msg.length <= 0 || createEmail.$invalid">Submit</button>
             </div>
-        </fieldset>
-
-        <fieldset class="left-label">
-            <label for="title">Title</label>
-            <input type="text" name="title" ng-model="myForm.title" ng-minlength="6" ng-maxlength="64" required>
-            <div class="error" ng-messages="formName.title.$error">
-                <div ng-message="required">Please add a title.</div>
-                <div ng-message="minlength">Your title is too short.</div>
-                <div ng-message="maxlength">Your title is too long.</div>
+            <div class="col-md-6">
+                <!-- EMAIL -->
+                <div class="form-group" ng-class="{ 'has-error' : createEmail.email.$invalid && createEmail.email.$dirty }">
+                    <label>E-mail:</label>
+                    <input type="email" name="email" class="form-control" ng-model="email">
+                    <p ng-show="createEmail.email.$invalid && createEmail.email.$dirty" class="help-block">Enter a valid email.</p>
+                </div>
+                <button type="submit" class="btn btn-primary" ng-disabled="email <= 0 || createEmail.email.$pristine || createEmail.email.$dirty && createEmail.email.$invalid" ng-click="addReceiver(email)">Add Receiver</button>
             </div>
-
-            <label for="content">Content</label>
-            <textarea name="content" ng-model="myForm.content" ng-minlength="2" ng-maxlength="1024" placeholder="Your message" cols="60" rows="6" required></textarea>
-            <div class="error" ng-messages="formName.content.$error">
-                <div ng-message="required">Please write your e-mail.</div>
-                <div ng-message="minlength">Your e-mail is too short.</div>
-                <div ng-message="maxlength">Your e-mail is too long.</div>
-            </div>
-
-            <input type="submit" class="btn btn-default" ng-click="myForm.submitTheForm()" value="Send an e-mail" ng-disabled="error || incomplete"/>
-        </fieldset>
-    </form>
+        </form>
+    </div>
 </div>
