--- a/modules/inbox/customFolder.html
+++ b/modules/inbox/customFolder.html
@@ -1,7 +1,7 @@
 <div class="jumbotron" ng-controller="customList">
     <div class="table-responsive">
         <table class="table">
-           <tbody customlist></tbody>
+           <tbody list></tbody>
         </table>
     </div>
 </div>
