--- a/modules/inbox/inbox.html
+++ b/modules/inbox/inbox.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" ng-controller="emailsCtrl">
+<div class="jumbotron" ng-controller="inboxCtrl">
     <div class="table-responsive">
         <table class="table">
            <tbody list></tbody>
